--- a/conf/files.conf
+++ b/conf/files.conf
@@ -4,6 +4,9 @@
 #
 # 	- eventprocessor: Impact event processor log
 # 	- eventreader: Impact event reader log
+# 	- profilestats: OMNIbus profiler log 
+# 	- triggerstats: OMNIbus trigger stats log (not implemented yet)
+# 	- masterstats: OMNIbus master stats log (not implemented yet)
 #
-/opt/IBM/tivoli/impact/logs/NCIPRIMARY_eventprocessor.log,eventprocessor
-/opt/IBM/tivoli/impact/logs/NCIPRIMARY_omnibuseventreader.log,eventreader
+/opt/IBM/tivoli/netcool/omnibus/log/EAST_AGG_P_profiler_report.log1,profilestats
+
