Update to indicate triggerstats is now handled

--- a/conf/files.conf
+++ b/conf/files.conf
@@ -4,9 +4,9 @@
 #
 # 	- eventprocessor: Impact event processor log
 # 	- eventreader: Impact event reader log
-# 	- profilestats: OMNIbus profiler log 
-# 	- triggerstats: OMNIbus trigger stats log (not implemented yet)
+# 	- profilestats: OMNIbus profiler log (use .log1)
+# 	- triggerstats: OMNIbus trigger stats log (use .log1)
 # 	- masterstats: OMNIbus master stats log (not implemented yet)
 #
 /opt/IBM/tivoli/netcool/omnibus/log/EAST_AGG_P_profiler_report.log1,profilestats
-
+/opt/IBM/tivoli/netcool/omnibus/log/EAST_AGG_P_trigger_stats.log1,triggerstats
